remove icon for watch action, do not collapse views menu, fix arrow jumping on more link

--- a/osmfoundation.less
+++ b/osmfoundation.less
@@ -557,6 +557,10 @@ footer {
             }
         }
 
+        &.menuForceShow h3 a {
+            background-position: 100% 70%;
+        }
+
         h3 span {
             padding-left: 1em;
             padding-top: 0;
